--- a/education.html
+++ b/education.html
@@ -101,7 +101,7 @@
                   <div class="progress-bar" style="width:75%;height:25px"></div>
                 </div>
                 <hr>
-                <h5 id="skills">Siber Güvenlik</h5><div class="progress" style="height:8px">
+                <h5 id="skills">Cyber security</h5><div class="progress" style="height:8px">
                   <div class="progress-bar" style="width:50%;height:50px"></div>
                 </div>
                 <hr>
